--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -13,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n"
+      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n"
      ]
     }
    ],
@@ -29,7 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -415,213 +416,66 @@
     "X = merged_inner.drop(columns=['Country/Region', 'Confirmed'])\n",
     "\n",
     "#Values the model should predict\n",
-    "y = merged_inner['Confirmed']"
+    "Y = {'Cases' : merged_inner['Confirmed'] , 'Deaths' : merged_inner['Deaths']}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get the split of the trainning and testing set\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeRegressor()"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Fitting model with tranning set\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "regressor = DecisionTreeRegressor()\n",
-    "regressor.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Predicting\n",
-    "y_pred = regressor.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual</th>\n",
-       "      <th>Predicted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6116</th>\n",
-       "      <td>101</td>\n",
-       "      <td>101.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>189</td>\n",
-       "      <td>104.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9731</th>\n",
-       "      <td>10801</td>\n",
-       "      <td>10804.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1386</th>\n",
-       "      <td>5</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9057</th>\n",
-       "      <td>2</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6871</th>\n",
-       "      <td>717</td>\n",
-       "      <td>993.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10935</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7863</th>\n",
-       "      <td>167</td>\n",
-       "      <td>152.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9650</th>\n",
-       "      <td>28</td>\n",
-       "      <td>27.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2317 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Actual  Predicted\n",
-       "6116      101      101.0\n",
-       "9997        4        1.0\n",
-       "2917      189      104.0\n",
-       "9731    10801    10804.0\n",
-       "1386        5       11.0\n",
-       "...       ...        ...\n",
-       "9057        2        6.0\n",
-       "6871      717      993.0\n",
-       "10935       1        1.0\n",
-       "7863      167      152.0\n",
-       "9650       28       27.0\n",
-       "\n",
-       "[2317 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Show difference of real and predicted values\n",
-    "df=pd.DataFrame({'Actual':y_test, 'Predicted':y_pred})\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 347.48597324126024\n",
-      "Mean Squared Error: 4794504.428571428\n"
+      "Starting training for  Cases .\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-828287cbf5f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Mean Absolute Error:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean_absolute_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Mean Squared Error:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Root Mean Squared Error:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andreiagouveia23/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting training for  Deaths .\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andreiagouveia23/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (50) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "#Show Errors\n",
-    "from sklearn import metrics\n",
-    "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Values to compare with error -> less than 10% of the mean result is a good success\n",
-    "merged_inner.describe()"
+    "\n",
+    "#Test case\n",
+    "variables = ['Cases' , 'Deaths']\n",
+    "\n",
+    "variablesScores = {}\n",
+    "#different nr of iterations to compare results\n",
+    "max_iter_array = [50, 100, 150, 200, 250]\n",
+    "\n",
+    "for variable in variables:\n",
+    "    print('Starting training for ' , variable, '.')\n",
+    "    \n",
+    "    #Setting up training sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X,Y[variable])\n",
+    "    \n",
+    "    for it in max_iter_array:\n",
+    "        mlpr = MLPRegressor(max_iter = it)\n",
+    "        \n",
+    "        #need to fix date\n",
+    "        mlpr.fit(X_train , y_train)\n",
+    "        "
    ]
   },
   {
