added some more neural

--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n"
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n"
      ]
     }
    ],
@@ -27,10 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.datasets import make_regression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import explained_variance_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn import preprocessing as pre"
    ]
   },
   {
@@ -428,7 +432,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training for  Cases .\n"
+      "Starting training for  Cases .\n",
+      "On iteration  50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andreiagouveia23/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (50) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predtic:  [ 2.21574068  1.92785255 -0.69394925 ... -0.57689311  0.290135\n",
+      " -0.86146124]\n",
+      "0.38862399609945497\n",
+      "On iteration  100\n"
      ]
     },
     {
@@ -443,15 +466,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training for  Deaths .\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/andreiagouveia23/.local/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (50) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "Predtic:  [ 4.35703622  3.43601621 -4.77735382 ... -2.79416475  0.01273547\n",
+      " -5.54074461]\n",
+      "0.6832684451996909\n",
+      "On iteration  150\n",
+      "Predtic:  [ 0.97430349  2.34703453 -4.09693845 ... -2.53187188 -0.12356761\n",
+      " -5.29269611]\n",
+      "-3.8532817055762623\n",
+      "On iteration  200\n",
+      "Predtic:  [ 3.72327728  2.2343074  -0.20009435 ... -0.71595522 -0.07977032\n",
+      " -0.16837258]\n",
+      "0.4054800177428044\n",
+      "On iteration  250\n",
+      "Predtic:  [ 2.46762631  1.04251091 -1.16927508 ... -1.19470798 -0.79805999\n",
+      " -1.20331283]\n",
+      "-37.47181181754443\n",
+      "Starting training for  Deaths .\n",
+      "On iteration  50\n",
+      "Predtic:  [0.45548216 0.34095933 1.59628617 ... 0.32155684 0.50853445 0.32013396]\n",
+      "-786.5996055467817\n",
+      "On iteration  100\n",
+      "Predtic:  [-0.35466214 -0.30404802 -0.39877188 ... -0.48051424 -0.29560096\n",
+      " -0.38780269]\n",
+      "-232.3526034667456\n",
+      "On iteration  150\n",
+      "Predtic:  [ 0.62957727 -0.15055834  6.44548589 ...  0.07281443  0.29515046\n",
+      " -0.03218325]\n",
+      "-0.39741871306724974\n",
+      "On iteration  200\n",
+      "Predtic:  [-0.22327471 -0.22685368  2.77781009 ... -0.0854578  -0.24262497\n",
+      " -0.08212772]\n",
+      "0.32472985125648735\n",
+      "On iteration  250\n",
+      "Predtic:  [ 0.75000278  0.091194    3.15219119 ...  0.20655391  0.60096819\n",
+      " -0.02225848]\n",
+      "-0.9448018084793908\n",
+      "{'Cases': [0.38862399609945497, 0.6832684451996909, -3.8532817055762623, 0.4054800177428044, -37.47181181754443, -786.5996055467817, -232.3526034667456, -0.39741871306724974, 0.32472985125648735, -0.9448018084793908], 'Deaths': [0.38862399609945497, 0.6832684451996909, -3.8532817055762623, 0.4054800177428044, -37.47181181754443, -786.5996055467817, -232.3526034667456, -0.39741871306724974, 0.32472985125648735, -0.9448018084793908]}\n",
+      "Done\n"
      ]
     }
    ],
@@ -461,6 +512,9 @@
     "variables = ['Cases' , 'Deaths']\n",
     "\n",
     "variablesScores = {}\n",
+    "\n",
+    "iteration_scores = []\n",
+    "    \n",
     "#different nr of iterations to compare results\n",
     "max_iter_array = [50, 100, 150, 200, 250]\n",
     "\n",
@@ -470,12 +524,31 @@
     "    #Setting up training sets\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X,Y[variable])\n",
     "    \n",
+    "    scaler = pre.StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.fit_transform(X_test)\n",
+    "    \n",
     "    for it in max_iter_array:\n",
     "        mlpr = MLPRegressor(max_iter = it)\n",
+    "        print('On iteration ', it)\n",
     "        \n",
     "        #need to fix date\n",
     "        mlpr.fit(X_train , y_train)\n",
-    "        "
+    "        \n",
+    "        #predict model\n",
+    "        #predict_train = mlpr.predict(X_train_scaled)\n",
+    "        \n",
+    "        #predict test\n",
+    "        predict_test = mlpr.predict(X_test_scaled)\n",
+    "        print('Predtic: ' , predict_test)\n",
+    "        \n",
+    "        score = mlpr.score(X_test, y_test)\n",
+    "        print(score)\n",
+    "        iteration_scores.append(score)   \n",
+    "        \n",
+    "    variablesScores[variable] = (iteration_scores)\n",
+    "print(variablesScores)    \n",
+    "print(\"Done\")"
    ]
   },
   {
